<resources>

    <string name="app_name">HomographyAnalyzer</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_homography">Homography</string>
    <string name="picture_chooser_descriptor">Choose a picture from Gallery</string>
    <string name="picture_taker_descriptor">Take a Picture</string>
    <string name="base_img_descriptor">Base Image to reference</string>
    <string name="query_img_descriptor">Image to be transformed to base image</string>
    <string name="image_grid">Image Grid</string>
    <string name="handle_label">Preferences</string>
    <string name="drawer_descriptor">Sliding Drawer for finding homographies</string>
    <string name="slider_button">Slide this button for preferences</string>
    <string name="title_activity_transform_result">TransformResultActivity</string>
    <string name="select_intro">long-press a thumbnail to change the Image</string>
    <string name="show_exp_image">Larger View of Image</string>
    <string name="exp_image_description">This is a larger view of the selected thumbnail</string>
    <string name="transform">Transform</string>
    <string name="threshhold_seekbar_label">Choose size of threshhold</string>
    <string name="ocr_button_label">OCR!</string>
    <string name="button_save_label">Save All</string>
    <string name="input_save_hint">Directory</string>

</resources>