<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/select_intro"
            android:textStyle="bold" />

        <Gallery
            android:id="@+id/gallery"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <ImageButton
                android:id="@+id/imageRetrieverButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="fill_horizontal|center"
                android:layout_weight="1"
                android:contentDescription="@string/query_img_descriptor"
                android:src="@drawable/ic_action_search_dark"
                android:text="@string/transform" />

            <Button
                android:id="@+id/transformButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:text="@string/transform" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/input_directory_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/input_save_hint" />

            <Button
                android:id="@+id/button_save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/button_save_label" />

        </LinearLayout>

        <TextView
            android:id="@+id/exp_image_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/query_img_descriptor"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/show_exp_image"
            android:textStyle="italic" />

        <ImageView
            android:id="@+id/exp_image"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:contentDescription="@string/exp_image_description" />
    </LinearLayout>

    <SlidingDrawer
        android:id="@+id/slidingDrawer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:content="@+id/content"
        android:handle="@+id/handle"
        android:orientation="horizontal" >

        <ImageButton
            android:id="@+id/handle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/slider_button"
            android:src="@drawable/navigation_previous_item"
            android:text="@string/handle_label" />

        <LinearLayout
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/default_background"
            android:contentDescription="@string/drawer_descriptor"
            android:orientation="vertical" >

            <Spinner
                android:id="@+id/features"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Spinner
                android:id="@+id/homography_methods"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/threshhold_seekbar_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/threshhold_seekbar_label"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/default_text_color" />

            <SeekBar
                android:id="@+id/threshold_seekbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/ocrButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:text="@string/ocr_button_label" />
        </LinearLayout>
    </SlidingDrawer>

</FrameLayout>